--- a/investment.html
+++ b/investment.html
@@ -691,7 +691,6 @@
         const submitBtn = document.getElementById('submitBtn');
         const updateBtn = document.getElementById('updateBtn');
         const cancelBtn = document.getElementById('cancelBtn');
-        const logoutBtn = document.getElementById('logoutBtn');
         
         // State variables
         let editingId = null;
@@ -739,13 +738,7 @@
                 setDefaultDateAndDay();
             });
 
-            // Logout button
-            logoutBtn.addEventListener('click', function() {
-                if (confirm('Are you sure you want to logout?')) {
-                    // Implement logout functionality
-                    window.location.href = 'index.html';
-                }
-            });
+            // Logou
 
             // Filter buttons
             document.querySelectorAll('[data-filter]').forEach(button => {
