--- a/tracking.html
+++ b/tracking.html
@@ -641,7 +641,7 @@
             </div>
         </div>
     </footer>
-
+<script scr="session.js"></sxript>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
