--- a/tracking.html
+++ b/tracking.html
@@ -455,7 +455,7 @@
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-                <li><a href="attendance.html"><i class="fas fa-calendar-check"></i> Attendance</a></li>
+                <li><a href="attendence.html"><i class="fas fa-calendar-check"></i> Attendance</a></li>
                 <li><a href="investment.html"><i class="fas fa-chart-pie"></i> Investment</a></li>
                 <li><a href="tracking.html" class="active"><i class="fas fa-search-dollar"></i> Tracking</a></li>
             </ul>
