Update and rename tracking (1).html to tracking.html

--- a/tracking.html
+++ b/tracking.html
@@ -452,7 +452,7 @@
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-                <li><a href="attendance.html"><i class="fas fa-calendar-check"></i> Attendance</a></li>
+                <li><a href="attendence.html"><i class="fas fa-calendar-check"></i> Attendance</a></li>
                 <li><a href="investment.html"><i class="fas fa-chart-pie"></i> Investment</a></li>
                 <li><a href="tracking.html" class="active"><i class="fas fa-search-dollar"></i> Tracking</a></li>
             </ul>
@@ -506,7 +506,7 @@
                     <i class="fas fa-piggy-bank"></i>
                 </div>
                 <div class="card-info">
-                    <h3 id="remainingAmount">$l0.00</h3>
+                    <h3 id="remainingAmount">0.00</h3>
                     <p>Remaining Amount</p>
                     <div class="calculation-info">Remain Amount</div>
                 </div>
