--- a/tracking.html
+++ b/tracking.html
@@ -649,7 +649,7 @@
             </p>
         </div>
     </footer>
-    <script scr="session.js"></script>
+    <script src="session.js"></script>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
