--- a/tracking.html
+++ b/tracking.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+uu<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -756,11 +756,7 @@
             });
 
             // Logout button
-            logoutBtn.addEventListener('click', function() {
-                if (confirm('Are you sure you want to logout?')) {
-                    window.location.href = 'index.html';
-                }
-            });
+            
 
             // Filter buttons
             document.querySelectorAll('[data-filter]').forEach(button => {
