--- a/attendence.html
+++ b/attendence.html
@@ -362,12 +362,14 @@
             padding: 1rem;
             text-align: left;
             border-bottom: 1px solid #eee;
+            font-weight: bold;
         }
         
         th {
             background: var(--light);
             font-weight: 600;
             color: var(--primary);
+            font-weight: bold;
         }
         
         tr:hover {
