--- a/login.html
+++ b/login.html
@@ -418,7 +418,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Tractor Fleet Management || Designed By <span>Uttra Patel</span><br />
+            <p>&copy; 2025 Personal Expense Tracker  || Designed By <span>Uttra Patel</span><br />
             </p>
         </div>
     </footer>
