--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Tractor Fleet Management || Designed By <span>Uttra Patel</span><br />
+            <p>&copy; 2025 Personal Expenses Tracker  || Designed By <span>Uttra Patel</span><br />
 
             </p>
         </div>
