--- a/investment.html
+++ b/investment.html
@@ -631,7 +631,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Tractor Fleet Management || Designed By <span>Uttra Patel</span><br />
+            <p>&copy; 2025 Personal Expenses Tracker  || Designed By <span>Uttra Patel</span><br />
                 <p1>session expired is <span id="counter">0s</span></p1>
             </p>
         </div>
