--- a/tracking.html
+++ b/tracking.html
@@ -646,7 +646,7 @@ uu<!DOCTYPE html>
 
         <footer>
         <div class="container">
-            <p>&copy; 2025 Tractor Fleet Management || Designed By <span>Uttra Patel</span><br />
+            <p>&copy; 2025 Personal Expenses Tracker  || Designed By <span>Uttra Patel</span><br />
                 <p1>session expired is <span id="counter">0s</span></p1>
             </p>
         </div>
