--- a/investment.html
+++ b/investment.html
@@ -611,6 +611,7 @@
             <table id="investmentTable">
                 <thead>
                     <tr>
+                        <th>#</th
                         <th>ID</th>
                         <th>Date</th>
                         <th>Day</th>
@@ -946,9 +947,11 @@
                 return;
             }
             
-            recordsToRender.forEach(record => {
+            recordsToRender.forEach((record,index) => {
                 const row = document.createElement('tr');
+                const squ = index + 1;
                 row.innerHTML = `
+                <td>${seq}</td>
                 <td>${record.id}</td>
                     <td>${formatDate(record.date)}</td>
                     <td>${record.day}</td>
