--- a/investment.html
+++ b/investment.html
@@ -611,7 +611,7 @@
             <table id="investmentTable">
                 <thead>
                     <tr>
-                        <th>#</th
+                        <th>#</th>
                         <th>ID</th>
                         <th>Date</th>
                         <th>Day</th>
@@ -949,7 +949,7 @@
             
             recordsToRender.forEach((record,index) => {
                 const row = document.createElement('tr');
-                const squ = index + 1;
+                const seq = index + 1;
                 row.innerHTML = `
                 <td>${seq}</td>
                 <td>${record.id}</td>
