--- a/tracking.html
+++ b/tracking.html
@@ -673,8 +673,8 @@
                         <select id="mode" class="form-control" required>
                             <option value="">Select Mode</option>
                             <option value="Cash">Cash</option>
-                            <option value="Bank Transfer">Bank Transfer</option>
-                            <option value="Credit Card">Credit Card</option>
+                            <option value="Bank Transfer">Intrest</option>
+                            <option value="Credit Card">Capital</option>
                             <option value="Digital Wallet">Digital Wallet</option>
                             <option value="Other">Other</option>
                         </select>
