--- a/attendence.html
+++ b/attendence.html
@@ -1163,7 +1163,7 @@
             </p>
         </div>
     </footer>
-    
+    <script src="session.js"></script>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
