--- a/attendence.html
+++ b/attendence.html
@@ -2395,9 +2395,10 @@
                 // Set font family to Sans-serif
                 doc.setFont("helvetica", "normal");
 
-                // Fetch data for selected month
-                const startDate = `${selectedMonth}-01`;
-                const endDate = `${selectedMonth}-31`;
+                const [year, month] = selectedMonth.split("-");
+                 const startDate = `${selectedMonth}-01`;
+                 const lastDay = new Date(year, month, 0).getDate(); // ✅ correct last date
+                  const endDate = `${selectedMonth}-${String(lastDay).padStart(2, "0")}`;
 
                 const { data, error } = await supabase
                     .from("D-Atten")
