--- a/login.html
+++ b/login.html
@@ -391,7 +391,7 @@
                     <label for="email">Email Address</label>
                     <div class="input-with-icon">
                         <i class="fas fa-envelope"></i>
-                        <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+                        <input type="email" id="email" class="form-control" placeholder="Enter your email" required autocomplete="off">
                     </div>
                 </div>
                 
