--- a/attendence.html
+++ b/attendence.html
@@ -769,7 +769,7 @@
                 <li><a href="#" class="active"><i class="fas fa-calendar-check"></i> Attendance</a></li>
                 <li><a href="investment.html"><i class="fas fa-chart-pie"></i> Investment</a></li>
                 <li><a href="tracking.html"><i class="fas fa-search-dollar"></i> Tracking</a></li>
-                <li><a href="dts.html"><i class="fas fa-credit-card"></i>DTS</a></li>
+                <li><a href="1.html"><i class="fas fa-credit-card"></i>DTS</a></li>
             </ul>
         </nav>
     </header>
