--- a/login.html
+++ b/login.html
@@ -427,7 +427,7 @@
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Iml5ZGFtdnJseHR3c25xdmZsYXhxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwOTczMTIsImV4cCI6MjA3MzY3MzMxMn0.Z8m6XGyu9wsN_UJ8EZYr12BRemsO12_U8EEZ9JizQ6w';
-        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+        const supabas = window.supabase.createClient(supabaseUrl, supabaseKey);
         
         // Real-time date and time
         function updateDateTime() {
@@ -479,7 +479,7 @@
             
             try {
                 // Sign in with Supabase
-                const { data, error } = await supabase
+                const { data, error } = await supabas
                     .from('admin')
                     .select('*')
                     .eq('email', email)
