--- a/1.html
+++ b/1.html
@@ -694,10 +694,10 @@
         // Initialize Supabase (optional)
         const SUPABASE_URL = 'https://your-project.supabase.co';
         const SUPABASE_ANON_KEY = 'your-anon-key';
-        let supabase;
+        let client;
         
         try {
-            supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+            client = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         } catch (error) {
             console.warn('Supabase not configured, using local storage only');
         }
