Update and rename dnm.html to salary.html

--- a/salary.html
+++ b/salary.html
@@ -901,7 +901,7 @@
         </div>
     </footer>
 
-<script src="main.js"></script>
+<script src="session.js"></script>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
