--- a/salary.html
+++ b/salary.html
@@ -689,7 +689,7 @@
                 <li><a href="attendence.html"><i class="fas fa-calendar-check"></i> Attendance</a></li>
                 <li><a href="investment.html"><i class="fas fa-chart-pie"></i> Investment</a></li>
                 <li><a href="tracking.html"><i class="fas fa-search-dollar"></i> Tracking</a></li>
-                <li><a href="salary.html" class="active"><i class="fas fa-money-bill-wave"></i> Salary</a></li>
+                <li><a href="#" class="active"><i class="fas fa-money-bill-wave"></i> Salary</a></li>
             </ul>
         </nav>
     </header>
