--- a/transaction.html
+++ b/transaction.html
@@ -990,7 +990,7 @@
         </div>
     </footer>
 
-    <script src="sessionjs"></script>
+    <script src="session.js"></script>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
