--- a/transaction.html
+++ b/transaction.html
@@ -1106,6 +1106,9 @@
                 <a href="#" class="nav-item" id="settings-nav">
                     <i class="fas fa-cog"></i> Settings
                 </a>
+                   <a href="#" class="nav-item" id="logoutBtn">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                   </a>
             </div>
             
 
