--- a/transaction.html
+++ b/transaction.html
@@ -1609,7 +1609,7 @@
         </div>
     </div>
 
-<script src="sessionjs"></script>
+<script src="session.js"></script>
     <script>
         // Supabase Configuration
         const SUPABASE_URL = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
