--- a/salary.html
+++ b/salary.html
@@ -237,6 +237,7 @@
             margin-bottom: 25px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            overflow-x: hidden;
         }
         
         .form-title {
