--- a/salary.html
+++ b/salary.html
@@ -1002,7 +1002,7 @@
                                 Attendance Days
                             </label>
                             <input type="number" class="form-input" id="attendanceDays" min="0" max="31" step="1" required>
-                        </div>
+                        </div><br>
                         
                         <div class="form-group">
                             <label class="form-label">
