--- a/salary.html
+++ b/salary.html
@@ -1018,7 +1018,7 @@
                                 PF (₹)
                             </label>
                             <input type="number" class="form-input" id="pf" step="0.01" min="0" value="">
-                        </div>
+                        </div><br>
                         
                         <div class="form-group">
                             <label class="form-label">
