--- a/salary.html
+++ b/salary.html
@@ -1181,7 +1181,7 @@
             </div>
         </footer>
     </div>
-
+<script src="session.js"></script>
     <script>
         // Initialize Supabase client
         const supabaseUrl = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
