Update and rename transaction (1).html to transaction.html

--- a/transaction.html
+++ b/transaction.html
@@ -1319,7 +1319,7 @@
             </form>
         </div>
     </div>
-    
+    <script src="session.js"></script>
     <script>
         // Supabase Configuration
         const SUPABASE_URL = 'https://iydamvrlxtwsnqvflaxq.supabase.co';
