Replace 'Transport' option with 'Petrol'

--- a/transaction.html
+++ b/transaction.html
@@ -1146,7 +1146,7 @@
                                 <option value="salary">Salary</option>
                                 <option value="food">Food</option>
                                 <option value="shopping">Shopping</option>
-                                <option value="transport">Transport</option>
+                                <option value="petrol">Petrol</option>
                                 <option value="entertainment">Entertainment</option>
                                 <option value="bill">Bill Payment</option>
                                 <option value="other">Other</option>
